# pageserv

./: HISTORY  Makefile  Makefile.in  README  TODO  config.h.in  configure  configure.in  kids.c  listusers.c  main.c  pageserv.h  parseterms.c  parseusers.c  pqueue.c  protocol.c  queue.c  readconfig.c  sample.config  sockets.c  termdb.c  userdb.c  utility.c
clients/: Makefile  Makefile.in  client.c  parsemail.c  pushqueue.c  pushqueue.pl
delivery/: Makefile.in  checksum.c  getqueue.c  misc.c  modem.c  network.c  serial.c  tap.c  tap.h  taptest.c
http/: Makefile.in  admin.c  httpauth.c  httpmain.c  httpmisc.c  httpparse.c  httpprocess.c  lexer.l  moduser.c  sendpage.c  urlparse.c
include/: config.h.in  http.h  module.h  mymalloc.h  nettools.h  pageserv.h  snpp.h  snppclient.h  tap.h
pageserv/: Makefile.in  kids.c  ldaptermdb.c  ldapuserdb.c  login.c  main.c  modules.c  mymalloc.c  nettools.c  parseterms.c  parseusers.c  protocol.c  queue.c  readconfig.c  signals.c  sockets.c  sqluserdb.c  termdb.c  userdb.c  utility.c  ypuserdb.c
sample/: ldapify.term  ldapify.users  pageserv.conf  pageserv.ldap  termdb  userdb
snpp/: Makefile.in  snpplogin.c  snppmain.c  snppmisc.c  snppparse.c
webroot/: developer.html  index.html  info.html  sendpage.html
webroot/adminstuff/: adduser.html  admin.html  delete.html  index.html  listusers.html
webroot/docs/: http.html  protocol.html  rfc1861.html  snpp.html
webroot/userstuff/: index.html  moduser.html
