dnl $Id: configure.in,v 2.5 1997/04/11 20:35:16 dustin Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(pageserv)
AC_CONFIG_HEADER(include/config.h)

dnl Checks for programs.
AC_PROG_CC(-g)
AC_PROG_YACC
AC_PROG_RANLIB
AC_PATH_PROG(AR, ar, /bin/ar, $PATH)
AC_PROGRAM_CHECK(UNAMEPROG, uname, uname, )
AC_PROGRAM_CHECK(TRPROG, tr, tr, )
AC_PROGRAM_CHECK(SEDPROG, sed, sed, )

dnl What we on, boys?
echo "Checking out your OS..."
OS=`$UNAMEPROG|$TRPROG '[[A-Z]]' '[[a-z]]'`
VER=`$UNAMEPROG -r`
if test "$OS" = "SunOS" && test "$VER" -ge 5
then
    OS="solaris"
fi
case "$OS" in
    'sunos')
        echo "Woohoo!  SunOS 4.x, one of my favs"
	;;
    'netbsd')
	echo "NetBSD!  One of my favs"
	;;
    'solaris')
	echo "Solaris?!?  Oh, alright..."
	;;
    'irix')
	echo "Irix, I did a lot of the development under Irix"
	;;
esac

dnl Checks for libraries.
if test "$OS" != "irix"
then
    AC_CHECK_LIB(crypt, crypt)
fi
AC_CHECK_LIB(ndbm, main)
AC_CHECK_LIB(nsl, main)
AC_CHECK_LIB(socket, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h crypt.h rpcsvc/ypclnt.h)
AC_CHECK_HEADERS(rpcsvc/yp_prot.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select socket herror getopt)

AC_OUTPUT(Makefile pageserv/Makefile clients/Makefile delivery/Makefile)
