dnl $Id: configure.in,v 2.18 1997/07/07 08:47:18 dustin Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(pageserv)
AC_CONFIG_HEADER(include/config.h)

dnl Checks for programs.
AC_PROG_CC(-g)
AC_PROG_YACC
AC_PROG_RANLIB
AC_PATH_PROG(AR, ar, /bin/ar, $PATH)
AC_PROGRAM_CHECK(UNAMEPROG, uname, uname, )
AC_PROGRAM_CHECK(TRPROG, tr, tr, )
AC_PROGRAM_CHECK(SEDPROG, sed, sed, )
AC_PROGRAM_CHECK(CUTPROG, cut, cut, )

dnl What we on, boys?
echo "Checking out your OS..."
OS=`$UNAMEPROG|$TRPROG '[[A-Z]]' '[[a-z]]'`
VER=`$UNAMEPROG -r`
if test "$OS" = "sunos" && test "$VER" -ge 5
then
    OS="solaris"
fi
case "$OS" in
    'sunos')
        echo "Woohoo!  SunOS 4.x, one of my favs"
	;;
    'netbsd')
	echo "NetBSD!  One of my favs, setting -Wall"
	CFLAGS="$CFLAGS -Wall"
	;;
    'solaris')
	echo "Solaris?!?  Oh, alright..."
	;;
    'irix')
	echo "Looks like IRIX it's going to be..."
	if test GCC = "yes"
	then
	    echo "That's odd, we're using gcc...  OK."
	    echo "If you have the IDO, please set the environ CC to cc"
	    echo "to use the native compiler."
	else
	    echo "Using the native IDO, let's set some CFLAGS"
	    CFLAGS="$CFLAGS -fullwarn"
	fi
	;;
esac

dnl Checks for libraries.
if test "$OS" != "irix"
then
    AC_CHECK_LIB(crypt, crypt)
    AC_CHECK_LIB(ndbm, main)
    AC_CHECK_LIB(nsl, main)
    AC_CHECK_LIB(socket, main)
fi

if test "$OS" = "unixware"
then
    AC_CHECK_LIB(ucb, main)
    AC_CHECK_LIB(gen, main)
fi

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h crypt.h sys/select.h)
AC_CHECK_HEADERS(termio.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_TIME
AC_STRUCT_TM
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select socket herror getopt)

AC_OUTPUT(Makefile pageserv/Makefile clients/Makefile delivery/Makefile
	http/Makefile snpp/Makefile)

dnl Now let's make depend if he wants to.

echo "Would you like to make depend now?"
read theanswer

theanswer=`echo $theanswer | cut -c1`
if test $theanswer = "y"
then
    make depend
fi
