dnl $Id: configure.in,v 2.35 1999/06/08 07:25:23 dustin Exp $
dnl Process this file with autoconf to produce a configure script.
AC_INIT(pageserv)
AC_CONFIG_HEADER(include/config.h)

dnl Checks for programs.
AC_PROG_CC(-g)
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_RANLIB
AC_PATH_PROG(AR, ar, /bin/ar, $PATH)
AC_PATH_PROG(LINT, lint, /bin/lint, $PATH)
AC_PROGRAM_CHECK(UNAMEPROG, uname, uname, )
AC_PROGRAM_CHECK(TRPROG, tr, tr, )
AC_PROGRAM_CHECK(SEDPROG, sed, sed, )
AC_PROGRAM_CHECK(CUTPROG, cut, cut, )

dnl Do we do dynamically loading libs on this OS?
DYNLIBS=0
NEEDUNDERSCORE=0
MAKESO=:

CPPFLAGS="$CPPFLAGS -I/usr/local/include"
LDFLAGS="$LDFLAGS -L/usr/local/lib"

dnl What we on, boys?
echo "Checking out your OS..."
OS=`$UNAMEPROG|$TRPROG '[[A-Z]]' '[[a-z]]'`
VER=`$UNAMEPROG -r`
if test "$OS" = "sunos" && test "$VER" -ge 5
then
    OS="solaris"
fi
case "$OS" in
    'sunos')
        echo "Woohoo!  SunOS 4.x, one of my favs"
	if test "$GCC" = "yes"
	then
	    echo "Using GCC, let's try to make shared libs."
	    DYNLIBS=1
	    NEEDUNDERSCORE=0
	    MAKESO="$CC -shared"
	    CFLAGS="$CFLAGS -fPIC"
	fi
	;;
    'netbsd')
	echo "NetBSD!  One of my favs, setting -Wall"
	CFLAGS="$CFLAGS -Wall"
	;;
    'solaris')
	echo "Solaris?!?  Oh, alright..."
	;;
    'hp-ux')
        echo "HP-UX, this should be fun..."
        if test "$GCC" != "yes"
        then
            echo "Setting ANSI flags"
            CFLAGS="$CFLAGS -Ae"
        fi
        BSDLIKE=0
        ;;
    'irix')
	echo "Looks like IRIX it's going to be..."
	if test "$GCC" = "yes"
	then
	    echo "That's odd, we're using gcc...  OK."
	    echo "If you have the IDO, please set the environ CC to cc"
	    echo "to use the native compiler."
	else
	    echo "Using the native IDO, let's set some CFLAGS"
	    CFLAGS="$CFLAGS -fullwarn"
	    DYNLIBS=1
	    NEEDUNDERSCORE=0
	    MAKESO="ld -shared"
	fi
	;;
esac

AC_DEFINE_UNQUOTED(DYNLIBS, $DYNLIBS)
AC_SUBST(DYNLIBS)

AC_DEFINE_UNQUOTED(NEEDUNDERSCORE, $NEEDUNDERSCORE)
AC_SUBST(NEEDUNDERSCORE)

AC_DEFINE_UNQUOTED(MAKESO, $MAKESO)
AC_SUBST(MAKESO)

dnl Checks for libraries.
if test "$OS" != "irix"
then
    AC_CHECK_LIB(crypt, crypt)
    AC_CHECK_LIB(db, main)
    AC_CHECK_LIB(ndbm, main)
    AC_CHECK_LIB(nsl, main)
    AC_CHECK_LIB(socket, main)
fi

if test "$OS" = "unixware"
then
    AC_CHECK_LIB(ucb, main)
    AC_CHECK_LIB(gen, main)
fi

AC_CHECK_LIB(ldap, ldap_open)
AC_CHECK_LIB(lber, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_HEADER_TIME
AC_CHECK_HEADERS(fcntl.h sys/time.h sys/errno.h unistd.h crypt.h sys/select.h)
AC_CHECK_HEADERS(termio.h dlfcn.h rpcsvc/ypclnt.h rpcsvc/yp_prot.h)
AC_CHECK_HEADERS(termios.h sys/termios.h stropts.h ldap.h lber.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TM
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select socket herror getopt dlopen dlsym dlerror dlclose)
AC_CHECK_FUNCS(yp_match vsprintf vsnprintf snprintf sprintf strerror)

CFLAGS="$CFLAGS $CPPFLAGS"

AC_OUTPUT(Makefile pageserv/Makefile clients/Makefile delivery/Makefile
	http/Makefile snpp/Makefile readconfig/Makefile)
